--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <footer class="footer">
  
-      <p>Tribute Page | Mark Kenneth V. Jamandron | Avion School 2021</p>  
+      <p>Tribute Page | Mark Kenneth V. Jamandron</p>  
           
     </footer>
 </body>
